[gd_scene load_steps=7 format=3 uid="uid://clfw6msttiic0"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage3/fire_zone3.gd" id="1_68vw6"]
[ext_resource type="Texture2D" uid="uid://bu22uylk5n617" path="res://Assets/Misc/FireBlur.png" id="1_ga4kc"]

[sub_resource type="Gradient" id="Gradient_f2tn1"]
offsets = PackedFloat32Array(0.0138249, 0.230415, 0.400922, 0.718894, 1)
colors = PackedColorArray(1, 0, 0, 0, 0.984314, 0, 0, 1, 0.965097, 0.291155, 0, 1, 0.99754, 0.654204, 3.85046e-07, 1, 1, 0.897324, 0.741695, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_k7wqh"]
radius = 150.0

[sub_resource type="Animation" id="Animation_yk71b"]
resource_name = "FireLifespan"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:emission_sphere_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 128.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6mgke"]
_data = {
"FireLifespan": SubResource("Animation_yk71b")
}

[node name="FireZone" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_68vw6")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 256
lifetime = 0.5
texture = ExtResource("1_ga4kc")
emission_shape = 2
emission_sphere_radius = 0.01
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 250.0
orbit_velocity_min = -0.25
orbit_velocity_max = 0.25
radial_accel_min = -500.0
radial_accel_max = 100.0
scale_amount_min = 0.1
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_f2tn1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k7wqh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "FireLifespan"
libraries = {
"": SubResource("AnimationLibrary_6mgke")
}

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
